# App-XDFStreamer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cppcmake.yml
XdfStreamer/: XdfStreamer.pro  main.cpp  xdfstreamer.cpp  xdfstreamer.h  xdfstreamer.ui
XdfStreamer/libxdf/: xdf.cpp  xdf.h
